# PublishGoods

./: .gitignore  Cargo.toml  README.md  Rocket.toml  build.rs  mcp-tools-output.json
config/: default.toml
src/: cleaner.rs  data_storage.rs  main.rs  settings.rs  settings_page.rs  utils.rs
templates/: dashboard.html.hbs  detailed_template.html.hbs  editor.html.hbs  header.html.hbs  persons.html.hbs  settings.html.hbs  templates.html.hbs  test.html.hbs
templates_frontend/: alert_tmpl  editor_bibliography_entry_editor  editor_bibliography_folder_editor  editor_export_wizard  editor_import_wizard  editor_import_wizard_filter_mask  editor_import_wizard_filter_mask_categories  editor_main_project_overview  editor_project_metadata_custom_field_row  editor_project_metadata_identifier_row  editor_project_metadata_keyword_tag  editor_project_metadata_language_tag  editor_project_metadata_search_gnd_li  editor_project_metadata_settings  editor_project_metadata_settings_additional_fields  editor_project_metadata_settings_custom_fields  editor_project_metadata_settings_identifiers  editor_project_metadata_settings_person_li  editor_project_metadata_settings_tags  editor_section_authors_li  editor_section_editors_li  editor_section_identifier_row  editor_section_view  editor_sidebar_bibliography  editor_sidebar_bibliography_node  editor_sidebar_content_editor  editor_sidebar_content_editor_section  editor_sidebar_editor  languages_options  pdf_preview_toolbar  persons_edit  template_editor_export_format  template_editor_export_format_raw  template_editor_export_format_weasyprint
templates_frontend_temp_old/: editor_import_wizard  editor_import_wizard_filter_mask_categories  editor_main_project_overview  editor_section_authors_li  editor_section_editors_li  editor_section_view
typescript/: CitationTool.ts  CustomStyleTool.ts  Editor.ts  Export.ts  FixedLinkTool.ts  Import.ts  NoteTool.ts  SectionEditor.ts  api_requests.ts  (+4 more)
(+91 files in other folders)
